Implement deposit functionality with event handler in script.js and update button to call handleDeposit()

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="actions">
-          <button id="deposit-btn" class="btn btn-deposit" type="submit">
+          <button id="deposit-btn" class="btn btn-deposit" type="submit" onclick="handleDeposit()">
             Deposit
           </button>
           <button id="withdraw-btn" class="btn btn-withdrawal" type="button">
